# AIGL-Assistant

./: .gitattributes  .gitignore  README.ja.md  README.md  README.zh-CN.md  about-aigl.html  about-ailis.html  agent-lab.html  chat.html  control.html  electron-builder.yml  index.html  package.json  pet.html  pnpm-lock.yaml  pnpm-workspace.yaml  vision-region.html
Test/: index.html
backend/: .env.example  __init__.py  main.py
docs/: aigl-standard-tool-packs.md  ailis-advanced-tooling.md  ailis-agent-runner-v0.md  ailis-agent-runtime-codex-claude-code-optimization-plan.md  ailis-cartoon-rendering-options.md  ailis-codex-context-compaction.md  ailis-codex-skill-mcp-reference.md  ailis-codex-tool-acquisition-gateway.md  ailis-computer-runtime.md  ailis-contract-intake-pipeline.md  ailis-crawl4ai-local-worker.md  ailis-demo-benchmark-scorecard.md  ailis-email-tool.md  ailis-embodied-agent-architecture.md  ailis-file-manager-tool.md  ailis-gateway-v0.md  ailis-humanlike-eval.md  ailis-master-stylized-rendering-research.md  ailis-memory-architecture-v1.md  ailis-memory-architecture-v2.md  ailis-osworld-pc-eval.md  ailis-platform-adapter.md  ailis-runtime-codex-openclaw-verification.md  ailis-shader-rendering-system.md  ailis-standard-tool-packs.md  ailis-user-system-launch.md  ailis-vs-codex-execution-benchmark.md  ailis-vs-codex-gaia-failure-source-report-20260611.md  ailis-web-search-fetch-correct-path.md  (+13 more)
examples/python_safety_client/: README.md  pyproject.toml
examples/python_safety_client/src/ailis_safety_client/: __init__.py  cli.py  client.py
src/: app.js  (+23 more)
(+244 files in other folders)
